Release MineScreen Canvas 0.3.0